// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IMG SVG render correctly 1`] = `
<figure
  className=" css-7kp13n"
  id=""
>
  <i
    className="css-1dtfg9"
    color="currentColor"
    height="1rem"
    width="1rem"
  >
    <img
      alt=""
      src="SvgrURL"
    />
  </i>
</figure>
`;

exports[`IMG SVG render correctly with height, width, color, motion, classname 1`] = `
<figure
  className="test class css-7kp13n"
  id="test id"
>
  <i
    className="css-13bolp6"
    color="blue"
    height="2rem"
    width="2rem"
  >
    <img
      alt="svg image"
      src="SvgrURL"
    />
  </i>
</figure>
`;

exports[`OBJ SVG render correctly 1`] = `
<figure
  className=" css-7kp13n"
  id=""
>
  <i
    className="css-1dtfg9"
    color="currentColor"
    height="1rem"
    width="1rem"
  >
    
    <svg />
  </i>
</figure>
`;

exports[`OBJ SVG render correctly with height, width, color, motion, classname 1`] = `
<figure
  className="test class css-7kp13n"
  id="test id"
>
  <i
    className="css-13bolp6"
    color="blue"
    height="2rem"
    width="2rem"
  >
    
    <svg />
  </i>
</figure>
`;
